<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    tools:context=".HistoryActivity">


    <TextView
        android:id="@+id/history_title_label"
        android:layout_width="291dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:text="@string/history_title_text"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history_title_label">

        <TextView
            android:id="@+id/game_number_title"
            style="@style/history_title"
            android:layout_weight="1"
            android:text="@string/history_game_number_title_text" />

<!--        <View style="@style/history_separator_vertical" />-->

        <TextView
            android:id="@+id/date_title"
            style="@style/history_title"
            android:layout_weight="4"
            android:text="@string/history_time_title_text" />

<!--        <View style="@style/history_separator_vertical" />-->

        <TextView
            android:id="@+id/guesses_title"
            style="@style/history_title"
            android:layout_weight="3"
            android:text="@string/history_guesses_title_text" />

<!--        <View style="@style/history_separator_vertical" />-->

        <TextView
            android:id="@+id/result_title"
            style="@style/history_title"
            android:layout_weight="3"
            android:text="@string/history_result_title_text" />
    </LinearLayout>

    <View
        style="@style/history_separator_horizontal"
        android:layout_height="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_layout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/history_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_layout" />

    <Button
        android:id="@+id/back_btn"
        style="@style/button"
        android:layout_width="183dp"
        android:layout_height="57dp"
        android:layout_marginBottom="40dp"
        android:text="@string/back_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>